--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,69 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+.container{
+  background-color: #1E1E1E;
+  height: 100vh;
+  width: 100vw;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title{
+  margin-top: 100px;
+  margin-bottom: 10px;
+}
+
+.formulario{
+  background-color: #fff;
+  height: 210px;
+  width: 350px;
+  padding: 20px;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+.label{
+  margin-top: 10px;
+}
+
+.input{
+  margin: 7px 0;
+  padding: 7px;
+  border: none;
+  border-radius: 3px;
+  background-color: rgb(32, 32, 32);
+  color: #fff;
+}
+
+.input::placeholder{
+  font-size: 11px;
+}
+
+.button{
+  padding: 7px;
+  margin-top: 10px;
+  background-color: #00BCD4;
+  border: 0;
+  border-radius: 3px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.button:hover{
+  background-color: #00a8be;
+}
+
+.resultado{
+  margin-top: 20px;
+  width: 350px;
+  padding: 20px;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #4CAF50;
+  border-radius: 10px;
 }
